--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "url": "https://github.com/canadaduane/credit.git"
   },
   "scripts": {
-    "//": "note: use chomp instead"
+    "//": "# note: use `chomp` instead"
   },
   "dependencies": {
     "chef-uws": "^2.1.3",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.19.0"
+    "jsdom": "^22.1.0",
+    "multiline-ts": "^3.0.0",
+    "rehype-format": "^4.0.1",
+    "rehype-parse": "^8.0.4",
+    "rehype-stringify": "^9.0.3",
+    "sinuous": "^0.30.0",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.19.0",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
     "chomp": "^0.2.14",
     "liquidjs": "^10.8.2"
