--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "chef-uws": "^2.1.3",
     "jsdom": "^22.1.0",
+    "mrmime": "^1.0.1",
     "multiline-ts": "^3.0.0",
     "rehype-format": "^4.0.1",
     "rehype-parse": "^8.0.4",
