--- a/chompfile.toml
+++ b/chompfile.toml
@@ -7,7 +7,7 @@ run = "node server.js"
 
 [[task]]
 name = "build"
-deps = ['public/##.html.js', 'public/importmap.json']
+deps = ['public/##.html.js', 'public/importmap.json', 'public/credit.js']
 target = 'public/##.html'
 run = 'node $DEP > $TARGET'
 
