Use sinuous fork for now
Need sinuous to be an ES module

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "rehype-format": "^4.0.1",
     "rehype-parse": "^8.0.4",
     "rehype-stringify": "^9.0.3",
-    "sinuous": "^0.30.0",
+    "sinuous": "github:canadaduane/sinuous#434f93f9",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.30.0",
     "unified": "^10.1.2"
   },
