--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
-    "chomp": "^0.2.14",
-    "liquidjs": "^10.8.2"
+    "chomp": "^0.2.14"
   }
 }
