--- a/lib/framework/package.json
+++ b/lib/framework/package.json
@@ -6,7 +6,8 @@
   "types": "src/_credit.d.ts",
   "type": "module",
   "scripts": {
-    "dev": "sirv src --port 9000 --cors"
+    "dev": "sirv src --port 9000 --cors",
+    "tsc": "tsc"
   },
   "dependencies": {
     "jsdom": "^22.1.0",
@@ -19,7 +20,8 @@
   "devDependencies": {
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
-    "sirv-cli": "^2.0.2"
+    "sirv-cli": "^2.0.2",
+    "typescript": "^5.1.3"
   },
   "author": "Duane Johnson <duane.johnson@gmail.com>",
   "license": "MIT"
