Move everything to packages dir; experiment with better typescript plugin

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "name": "Run Extension",
       "type": "extensionHost",
       "request": "launch",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}/lib/jstc-vscode"]
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/jstc-vscode-extension"]
     }
   ]
 }
