--- a/packages/typescript-jstc-plugin/package.json
+++ b/packages/typescript-jstc-plugin/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-jstc-plugin",
   "main": "index.js",
   "dependencies": {
-    "escaper": "^3.0.6",
+    "@credit/jstc": "workspace:*",
     "typescript": "*"
   }
 }
