--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "credit",
-  "version": "1.0.0",
+  "name": "@credit/core",
+  "version": "0.1.0",
   "description": "Credit framework",
   "main": "src/credit.js",
-  "types": "src/_credit.d.ts",
   "type": "module",
   "scripts": {
     "dev": "sirv src --port 9000 --cors",
@@ -21,6 +20,7 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
     "sirv-cli": "^2.0.2",
+    "tsconfig": "workspace:*",
     "typescript": "^5.1.3"
   },
   "author": "Duane Johnson <duane.johnson@gmail.com>",
