--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -8,7 +8,7 @@
     "build": "cp -r src dist && node src/index.html.js >dist/index.html"
   },
   "dependencies": {
-    "credit": "workspace:*"
+    "@credit/core": "workspace:*"
   },
   "devDependencies": {
     "sirv-cli": "^2.0.2",
