--- a/packages/jswithts-typescript-plugin/package.json
+++ b/packages/jswithts-typescript-plugin/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jswithts-typescript-plugin",
+  "version": "0.1.0",
   "main": "index.js",
   "dependencies": {
     "@credit/jswithts": "workspace:*",
