--- a/packages/js-with-ts/vscode-extension/package.json
+++ b/packages/js-with-ts/vscode-extension/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "vscode": "^1.79.0"
   },
-  "main": "./dist/extension.js",
+  "main": "./src/extension.js",
   "author": "Duane Johnson <duane.johnson@gmail.com>",
   "license": "MIT",
   "categories": [
@@ -57,32 +57,22 @@
     ],
     "typescriptServerPlugins": [
       {
-        "name": "jswithts-typescript-plugin",
+        "name": "js-with-ts-typescript-plugin",
         "enableForWorkspaceTypeScriptVersions": true
       }
     ]
   },
   "scripts": {
-    "webpack": "webpack",
-    "vscode:prepublish": "pnpm install && webpack",
+    "vscode:prepublish": "pnpm install",
     "package": "vsce package --no-dependencies"
   },
   "dependencies": {
-    "jswithts-typescript-plugin": "workspace:*"
+    "js-with-ts-typescript-plugin": "workspace:*"
   },
   "devDependencies": {
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
     "@types/vscode": "^1.79.0",
-    "@vscode/test-electron": "^2.3.2",
     "@vscode/vsce": "^2.19.0",
-    "esbuild": "^0.18.7",
-    "eslint": "^8.41.0",
-    "glob": "^8.1.0",
-    "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.1.3"
   }
 }
