--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,8 @@
 packages:
-  - "packages/*"
+  - "packages/core"
+  - "packages/server"
+  - "packages/tsconfig"
+  - "packages/js-with-ts/cli"
+  - "packages/js-with-ts/typescript-plugin"
+  - "packages/js-with-ts/vscode-extension"
   - "examples/*"
