--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development node src/index.html.js >src/index.html && sirv src/",
-    "build": "cp -r src dist && node src/index.html.js >dist/index.html"
+    "build": "node src/index.html.js >src/index.html"
   },
   "dependencies": {
     "@credit/core": "workspace:*"
