Change default ssr env to "development"
For first-time users, it makes more sense to enable development env
by default, and require NODE_ENV=production for production deploys.

--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -4,8 +4,8 @@
   "description": "Example todo app for Credit framework",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development node src/index.html.js >src/index.html && sirv src/",
-    "build": "node src/index.html.js >src/index.html"
+    "dev": "node src/index.html.js >src/index.html && sirv src/",
+    "build": "NODE_ENV=production node src/index.html.js >src/index.html"
   },
   "dependencies": {
     "@credit/core": "workspace:*"
