Use sirv --dev mode to serve files uncached
Without the `--dev` mode flag, sirv will happily serve files that have
changed, but without warning you about some weird edge cases such as
Content-Length header mismatch or empty file contents.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
   "types": "dist/credit.d.ts",
   "type": "module",
   "scripts": {
-    "dev": "sirv src --port 9000 --cors",
+    "dev": "sirv src --dev --cors --port 9000",
     "build": "chomp build"
   },
   "dependencies": {
