--- a/examples/moon/package.json
+++ b/examples/moon/package.json
@@ -4,7 +4,8 @@
   "description": "Example scrolling moon app for the Credit framework",
   "type": "module",
   "scripts": {
-    "dev": "node public/index.html.js >public/index.html && sirv --dev public/"
+    "dev": "node public/index.html.js >public/index.html && sirv --dev public/",
+    "build": "NODE_ENV=production node public/index.html.js >public/index.html"
   },
   "dependencies": {
     "@credit/core": "workspace:*"
