--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An experimental web framework based on CRDTs",
   "type": "module",
   "main": "src/index.js",
-  "types": "src/index.d.ts", 
+  "types": "src/index.d.ts",
   "author": "Duane Johnson",
   "license": "MIT",
   "repository": {
@@ -15,17 +15,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "jsdom": "^22.1.0",
     "mrmime": "^1.0.1",
-    "rehype-format": "^4.0.1",
-    "rehype-parse": "^8.0.4",
-    "rehype-stringify": "^9.0.3",
     "sinuous": "github:canadaduane/sinuous#434f93f9",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.30.0",
-    "unified": "^10.1.2"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.30.0"
   },
   "devDependencies": {
-    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
     "chomp": "^0.2.14"
   }
