--- a/packages/js-with-ts/cli/package.json
+++ b/packages/js-with-ts/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@credit/js-with-ts",
+  "name": "@credt/js-with-ts",
   "version": "1.0.0",
   "description": "Javascript with Typescript Comments tools",
   "main": "src/index.js",
