--- a/packages/js-with-ts/vscode-extension/package.json
+++ b/packages/js-with-ts/vscode-extension/package.json
@@ -16,9 +16,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/canadaduane/credit.git"
+    "url": "https://github.com/canadaduane/credt.git"
   },
-  "homepage": "https://github.com/canadaduane/credit#readme",
+  "homepage": "https://github.com/canadaduane/credt#readme",
   "activationEvents": [
     "onLanguage:javascript"
   ],
