Add sinuous-trace and sinuous-lifecycle to libs
Export both sinuous-trace and sinuous-lifecycle as bundled parts of
@credt/core. For less than 1kb, we get the ability to intuitively add/
remove event listeners and other resource creation/destruction at
time of component mount/unmount.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "linkedom": "^0.14.26",
-    "sinuous": "github:canadaduane/sinuous#434f93f9"
+    "sinuous": "github:canadaduane/sinuous#434f93f9",
+    "sinuous-lifecycle": "^2.1.0",
+    "sinuous-trace": "^2.3.0"
   },
   "devDependencies": {
     "@credt/js-with-ts": "workspace:*",
