Emit js-crdt types in dist dir
Using tsconfig.json settings, we can add types to the js-crdt package,
while keeping the quick esbuild step for transforming to javascript.

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -2,13 +2,14 @@
   "name": "js-crdt",
   "version": "1.7.1",
   "description": "CRDT Conflict-free Replication Data Type",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "type": "module",
-  "types": "build/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "tsc && mocha",
+    "test": "mocha --recursive test",
     "typecheck": "tsc",
-    "build": "esbuild --bundle --platform=neutral --format=esm --minify --outdir=dist src/index.ts"
+    "bundle": "esbuild --bundle --platform=neutral --format=esm --minify --outdir=dist src/index.ts",
+    "build": "pnpm typecheck && pnpm bundle"
   },
   "repository": {
     "type": "git",
