Rename tsconfig -> @credt/tsconfig
Although a bit wordier, it makes it clear that our tsconfig.json files
are relying on / extending a package local to this monorepo.

--- a/examples/moon/package.json
+++ b/examples/moon/package.json
@@ -11,8 +11,8 @@
     "@credt/core": "workspace:*"
   },
   "devDependencies": {
+    "@credt/tsconfig": "workspace:*",
     "clean-html": "^2.0.1",
-    "sirv-cli": "^2.0.2",
-    "tsconfig": "workspace:*"
+    "sirv-cli": "^2.0.2"
   }
 }
