--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,11 +18,11 @@
   },
   "devDependencies": {
     "@credt/js-with-ts": "workspace:*",
+    "@credt/tsconfig": "workspace:*",
     "@types/node": "^20.3.1",
     "chomp": "^0.2.17",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
-    "tsconfig": "workspace:*",
     "typescript": "^5.1.3"
   },
   "author": "Duane Johnson <duane.johnson@gmail.com>",
