--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/base.json",
+  "extends": "@credt/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "dist",
     "noEmit": false,
