--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,7 @@ packages:
   - "packages/crdt"
   - "packages/server"
   - "packages/tsconfig"
-  - "packages/js-with-ts/cli"
-  - "packages/js-with-ts/typescript-plugin"
-  - "packages/js-with-ts/vscode-extension"
+  - "packages/ts-dot-js/cli"
+  - "packages/ts-dot-js/typescript-plugin"
+  - "packages/ts-dot-js/vscode-extension"
   - "examples/*"
