--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
     "sinuous-trace": "^2.3.0"
   },
   "devDependencies": {
-    "@credt/js-with-ts": "workspace:*",
+    "@credt/ts-dot-js": "workspace:*",
     "@credt/tsconfig": "workspace:*",
     "@types/node": "^20.3.1",
     "chomp": "^0.2.17",
