--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
     "@credt/tsconfig": "workspace:*",
     "@types/node": "^20.3.1",
     "chomp": "^0.2.17",
+    "esbuild": "0.18.10",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "typescript": "^5.1.3"
