Use .js file extension for moon example, with customConditions
Experiment with using th enew `"customConditions": ["ts-dot-js"]` in the
moon example's tsconfig.json.

--- a/examples/moon/tsconfig.json
+++ b/examples/moon/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@credt/tsconfig/base.json",
+  "compilerOptions": {
+    "customConditions": ["ts-dot-js"]
+  },
   "include": ["public/**/*.js", "private/**/*.js"]
 }
