--- a/examples/moon/package.json
+++ b/examples/moon/package.json
@@ -4,8 +4,8 @@
   "description": "Example scrolling moon app for the Credt framework",
   "type": "module",
   "scripts": {
-    "dev": "node public/index.html.ts.js >public/index.html && clean-html public/index.html --in-place && sirv --dev public/",
-    "build": "NODE_ENV=production node public/index.html.ts.js >public/index.html && clean-html public/index.html --in-place",
+    "dev": "node public/index.js >public/index.html && clean-html public/index.html --in-place && sirv --dev public/",
+    "build": "NODE_ENV=production node public/index.js >public/index.html && clean-html public/index.html --in-place",
     "build:serve": "pnpm build && sirv public/"
   },
   "dependencies": {
